<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageBackground"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/gradient"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/duration"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="12sp"
        android:background="@drawable/gradient"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/shortDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:textSize="18sp"
        android:background="@drawable/gradient"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toBottomOf="@+id/duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/longDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:background="@drawable/gradient"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toBottomOf="@+id/shortDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_personal_video_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/video"
        android:layout_marginBottom="40dp"
        android:id="@+id/intro_video"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_ondemand_video_24"
        app:layout_constraintStart_toEndOf="@+id/intro_video"
        app:layout_constraintEnd_toStartOf="@+id/image"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:id="@+id/video"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_image_24"
        app:layout_constraintStart_toEndOf="@+id/video"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        android:id="@+id/image"/>

</androidx.constraintlayout.widget.ConstraintLayout>